More Number.valueOf work.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@672706 13f79535-47bb-0310-9956-ffa450edef68